Adding additional template files and removing unused files

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,10 @@
 {{> hero}}
 
-{{> expertise}}
+{{> about}}
 
-{{> story}}
+{{> products}}
 
-{{> athletes}}
-
-{{> news}}
+{{> faqs}}
 
 {{> contact}}
+
